* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
- Add RockyLinux 8 support

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.2.1
- Removed EL6 support

* Tue Dec 24 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Add EL8 support

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Moved temporary aggregate CA certs reference files used by
  pki_cert_sync out of the target directory. These temporary
  files were being erroneously processed by the gitlab
  application.

* Fri Jan 25 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
- pki_cert_sync type now generates an aggregate CA certificates
  with X.509 certificate headers removed, cacerts_no_headers.pem,
  in addition to the existing aggregate CA certificates file,
  cacerts.pem. This new CA certificates file is useful for
  application that cannot handle certificate headers.
- Add a pki_cert_sync option, ``generate_pem_hash_links``, which controls
  whether pki_cert_sync should generate and maintain the PEM file hash
  links in the target directory. Disabling automatic PEM hash link
  generation is useful if an application is managing those links
  in the target directory, itself.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
- Drop Hiera 4 support
- Update badges and contribution guide URL in README.md

* Wed Jul 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.4-0
- Add support for OEL and Puppet 5

* Mon Apr 16 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.0.3-0